--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
+    "vee-validate": "^2.0.4",
     "vue": "2.5.10",
     "vue-router": "3.0.1",
     "vuex": "3.0.1"
