--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "vue": "2.5.10",
+    "vue-fixed-header": "^1.0.1",
     "vue-router": "3.0.1",
     "vuex": "3.0.1"
   },
