--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nprogress": "0.2.0",
     "vee-validate": "^2.0.4",
     "vue": "2.5.10",
+    "vue-icon": "^2.0.0",
     "vue-router": "3.0.1",
     "vuex": "3.0.1"
   },
