--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-fixed-header": "^1.0.1",
     "vue-icon": "^2.0.0",
     "vue-router": "3.0.1",
+    "vue-timeago": "^3.4.4",
     "vue-video-player": "^5.0.2",
     "vue-youtube-embed": "^2.1.3",
     "vuex": "3.0.1"
