--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "nprogress": "0.2.0",
     "vee-validate": "^2.0.4",
     "vue": "2.5.10",
+    "vue-awesome": "^2.3.5",
     "vue-awesome-swiper": "^3.1.2",
     "vue-fixed-header": "^1.0.1",
     "vue-icon": "^2.0.0",
     "vue-router": "3.0.1",
+    "vue-social-sharing": "^2.3.3",
     "vue-timeago": "^3.4.4",
     "vue-video-player": "^5.0.2",
     "vue-youtube-embed": "^2.1.3",
