--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "0.17.1",
     "element-ui": "2.0.8",
     "js-cookie": "2.2.0",
+    "moment": "^2.21.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "vee-validate": "^2.0.4",
