--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "vue-fixed-header": "^1.0.1",
     "vue-i18n": "^7.6.0",
     "vue-icon": "^2.0.0",
+    "vue-instagram": "^1.3.1",
     "vue-router": "3.0.1",
     "vue-social-sharing": "^2.3.3",
     "vue-timeago": "^3.4.4",
+    "vue-tweet-embed": "^2.1.1",
     "vue-video-player": "^5.0.2",
     "vue-youtube-embed": "^2.1.3",
     "vuex": "3.0.1"
