--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-fixed-header": "^1.0.1",
     "vue-i18n": "^7.6.0",
     "vue-icon": "^2.0.0",
+    "vue-infinite-loading": "^2.3.1",
     "vue-instagram": "^1.3.1",
     "vue-router": "3.0.1",
     "vue-social-sharing": "^2.3.3",
