--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue": "2.5.10",
     "vue-awesome": "^2.3.5",
     "vue-awesome-swiper": "^3.1.2",
+    "vue-event-calendar": "^1.5.2",
     "vue-facebook-signin-button": "^1.0.1",
     "vue-fixed-header": "^1.0.1",
     "vue-google-signin-button": "^1.0.2",
