--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vue-google-signin-button": "^1.0.2",
     "vue-i18n": "^7.6.0",
     "vue-icon": "^2.0.0",
+    "vue-image-crop-upload": "^2.3.0",
     "vue-infinite-loading": "^2.3.1",
     "vue-instagram": "^1.3.1",
     "vue-router": "3.0.1",
