--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nprogress": "0.2.0",
     "vee-validate": "^2.0.4",
     "vue": "2.5.10",
+    "vue-analytics": "^5.10.6",
     "vue-awesome": "^2.3.5",
     "vue-awesome-swiper": "^3.1.2",
     "vue-croppa": "^1.3.6",
