--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vue-froala-wysiwyg": "^2.8.1",
     "vue-google-autocomplete": "^1.1.0",
     "vue-google-signin-button": "^1.0.2",
+    "vue-head": "^2.0.12",
     "vue-i18n": "^7.6.0",
     "vue-icon": "^2.0.0",
     "vue-image-crop-upload": "^2.3.0",
