--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "vue-image-crop-upload": "^2.3.0",
     "vue-infinite-loading": "^2.3.1",
     "vue-instagram": "^1.3.1",
+    "vue-lazyload": "^1.2.3",
     "vue-router": "3.0.1",
     "vue-social-sharing": "^2.3.3",
     "vue-timeago": "^3.4.4",
