--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.21.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
+    "prerender-spa-plugin": "^3.0.0-beta.2",
     "vee-validate": "^2.0.4",
     "vue": "2.5.10",
     "vue-analytics": "^5.10.6",
@@ -39,6 +40,7 @@
     "vue-infinite-loading": "^2.3.1",
     "vue-instagram": "^1.3.1",
     "vue-lazyload": "^1.2.3",
+    "vue-meta": "^1.5.0",
     "vue-router": "3.0.1",
     "vue-social-sharing": "^2.3.3",
     "vue-timeago": "^3.4.4",
