--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "vue-tweet-embed": "^2.1.1",
     "vue-video-player": "^5.0.2",
     "vue-youtube-embed": "^2.1.3",
+    "vue2-google-maps": "^0.9.7",
     "vuex": "3.0.1"
   },
   "devDependencies": {
